framework/source/resource/qx/mobile/css/indigo.css
/* ... */
.selectbox:active {
  color: #ffffff;
  background-image: -webkit-gradient(linear, center top, center bottom, from(#7da0db), to(#3d72c9));
  /* Safari 4+, Chrome 2+ */

  background-image: -webkit-linear-gradient(top, #7da0db, #3d72c9);
  /* Safari 5.1+, Chrome 10+ */

  background-image: -moz-linear-gradient(top, #7da0db, #3d72c9);
  /* FF 3.6+ */

  background-image: linear-gradient(to bottom, #7da0db, #3d72c9);
  /* Standard (in flux) */

}
.selectbox-selected > div > .list-itemlabel:after {
  border: 0px solid transparent;
}
.selectbox-selected {
  color: #ffffff;
  background-image: -webkit-gradient(linear, center top, center bottom, from(#7da0db), to(#3d72c9));
  /* Safari 4+, Chrome 2+ */

  background-image: -webkit-linear-gradient(top, #7da0db, #3d72c9);
  /* Safari 5.1+, Chrome 10+ */

  background-image: -moz-linear-gradient(top, #7da0db, #3d72c9);
  /* FF 3.6+ */

  background-image: linear-gradient(to bottom, #7da0db, #3d72c9);
  /* Standard (in flux) */

}
.carousel-pagination-label {
  border: 1px solid white;
  opacity: 0.6;
  background-color: #888888;
  width: 8px;
  height: 8px;
  text-align: center;
  line-height: 8px;
  -webkit-border-radius: 15px;
  -moz-border-radius: 15px;
  border-radius: 15px;
  font-size: 1px;
  color: rgba(0, 0, 0, 0);
}
.carousel-pagination-label.active {
  background-color: #3d72c9;
  opacity: 1.0;
}
.carousel-pagination {
  top: -23px;
}
.picker-container {
  background-color: white;
}
.picker-label {
  color: black;
}
.picker-slot:before {
  background-color: #888888;
}
.picker-slot:after {
  background-color: #888888;
}
.picker-container:after {
  background-image: -webkit-gradient(linear, center top, center bottom, from(rgba(0, 0, 0, 0.6)), color-stop(33%, rgba(255, 255, 255, 0)), color-stop(66%, rgba(255, 255, 255, 0)), to(rgba(0, 0, 0, 0.6)));
  background-image: -webkit-linear-gradient(top, rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0) 33%, rgba(255, 255, 255, 0) 66%, rgba(0, 0, 0, 0.6));
  background-image: -moz-linear-gradient(top, rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0) 33%, rgba(255, 255, 255, 0) 66%, rgba(0, 0, 0, 0.6));
  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.6), rgba(255, 255, 255, 0) 33%, rgba(255, 255, 255, 0) 66%, rgba(0, 0, 0, 0.6));
}
.picker-container:before {
  top: 32px;
  height: 15px;
  background-color: #799dda;
  -webkit-box-shadow: 0px 2px 2px #000000;
  -moz-box-shadow: 0px 2px 2px #000000;
  box-shadow: 0px 2px 2px #000000;
  border-top: 1px solid black;
  border-bottom: 15px solid #3d72c9;
  opacity: 0.4;
}

input[type="text"]:not(.selectbox), input[type="number"], input[type="password"] {
  -webkit-user-modify: read-write-plaintext-only;
  -webkit-tap-highlight-color:rgba(0,0,0,0);
  outline-style: none;
}

.root.android.v2 input[type="password"] {
  position:relative;
  top:-10000px;
  -webkit-transform: translate3d(0,10000px,0);
}

